# cannonball

./: .clang-format  .clangd  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  meson.build  meson_options.txt
cannonball/: Cargo.toml  build.rs  cbindgen.toml
cannonball-client/: .gitignore  Cargo.toml  README.md  build.rs  meson.build  mesonbuild.sh
cannonball-client/ffi/: .gitignore  fodder-client.h
cannonball-client/src/: client.rs  qemu_event.rs
cannonball-client/test/client_test/: main.rs
cannonball-client/test/server_test/: main.rs
cannonball-tools/: Cargo.toml  meson.build  mesonbuild.sh
cannonball-tools/src/json/: main.rs
cannonball/src/: api.rs  args.rs  callbacks.rs  install.rs  lib.rs
docs/: PERF.md  PLUGIN_API.md  QEMU_ARCH.md
examples/jaivana/: Cargo.toml  README.md
examples/jaivana/src/: events.rs  lib.rs
examples/mons_meg/: Cargo.toml  README.md
examples/mons_meg/src/: events.rs  lib.rs
fodder-client/: Cargo.toml  build.rs  meson.build
fodder-client/ffi/: .gitignore
fodder-client/src/: client.rs  lib.rs  qemu_event.rs
fodder-client/test/client_test/: main.rs
fodder-client/test/server_test/: main.rs
include/: args.h  callback.h  cleanup.h  config.h  ctx.h  error.h  fodder.h  install.h  logging.h
plugin/include/: args.h  error.h  logging.h
plugin/src/: args.c  callback.c  install.c
src/: args.c  args.rs  callback.c  cleanup.c  client.rs  fodder.c  install.c  lib.rs  logging.c  qemu.c  qemu_event.rs
subprojects/: .gitignore  qemu.wrap
test/: mem_access.c  meson.build
