[package]
name = "cannonball"
version = "0.1.0"
edition = "2021"
description = "QEMU tracing framework"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cannonball"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
cbindgen = "0.24.3"
cc = "1.0.74"
# here's the trick, we only actually use the header file in cannonball, and any clients will need
# to actually install qemu, so for us it is only a build dependency :megajoy:
qemu = "0.1.6"
pkg-config = "0.3.26"

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
bytes = "1.2.1"
rand = "0.8.5"
futures = "0.3.24"
libc = "0.2.135"
bitflags = "1.3.2"
serde_json = "1.0.86"
serde = { version = "1.0.145", features = ["derive"] }
# crossbeam = "0.8.2"
