[package]
name = "cannonball_client"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "Cannonball client library for fast QEMU execution, memory, and syscall tracing."
repository = "https://github.com/novafacing/cannonball.git"
readme = "README.md"

[lib]
name = "cannonball_client"
crate-type = ["staticlib", "lib"]

[[bin]]
name = "client_test"
path = "test/client_test/main.rs"

[[bin]]
name = "server_test"
path = "test/server_test/main.rs"

[build-dependencies]
cbindgen = "0.24.3"

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
bytes = "1.2.1"
rand = "0.8.5"
futures = "0.3.24"
libc = "0.2.135"
bitflags = "1.3.2"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
# crossbeam = "0.8.2"
