[package]
name = "cannonball-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "json"
path = "src/json/main.rs"

[features]
# If enabled qemu binaries will be included into the tool binary directly
monolithic = []
# Enable monolithic by default because it is cool
default = ["monolithic"]

[dependencies]
# Generic async runtime and future support
futures = "0.3.24"
tokio = { version = "1.21.2", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }

# For bitflag parsing
bitflags = "1.3.2"
bytes = "1.2.1"
# For command line parsing
clap = { version = "4.0.17", features = ["derive"] }

# The cannonball client library
cannonball_client = "0.1.4"

# For json support and serializing events to it
serde = "1.0.145"
serde_derive = "1.0.145"
serde_json = "1.0.86"

# For logging
log = "0.4.17"
simple_logger = "3.0.0"

rand = "0.8.5"

# For executing qemu from memory if big binary is enabled

# memfd-exec = "0.1.3"

# For object file parsing to determine the architecture of the binary
object = "0.29.0"

# For streaming disassembly
yaxpeax-x86 = { version = "1.1.4", default-features = true }
yaxpeax-arch = { version = "0.2.7", features = [
    "std",
    "address-parse",
    "use-serde",
] }
