[package]
name = "cannonball"
version = "0.2.1"
edition = "2021"
description = "QEMU tracing framework"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cannonball"
crate-type = ["cdylib", "lib"]

[build-dependencies]
cbindgen = "0.24.3"
bindgen = "0.61.0"
# here's the trick, we only actually use the header file in cannonball, and any clients will need
# to actually install qemu, so for us it is only a build dependency :megajoy:
qemu = "0.1.6"

[dependencies]
libc = "0.2.135"
lazy_static = "1.4.0"
inventory = "0.3.2"
once_cell = "1.16.0"
