[package]
name = "fodder_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fodder_client"
crate-type = ["staticlib", "lib"]

[[bin]]
name = "client_test"
path = "src/client_test/main.rs"

[[bin]]
name = "server_test"
path = "src/server_test/main.rs"

[build-dependencies]
cbindgen = "0.24.3"

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
bytes = "1.2.1"
rand = "0.8.5"
futures = "0.3.24"
libc = "0.2.135"
bitflags = "1.3.2"
# crossbeam = "0.8.2"
