[package]
name = "jaivana"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "jaivana"
crate-type = ["cdylib"]

[dependencies]
cannonball = "0.2.3"
qemu = { version = "0.1.6", features = ["qemu-x86_64"] }
libc = "0.2.137"
lazy_static = "1.4.0"
inventory = "0.3.2"
once_cell = "1.16.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
memfd-exec = "0.1.4"
clap = { version = "4.0.22", features = ["derive"] }
